--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <br>
 
 <font color="#ffd700" face='verdana' size='2' style="">
-A rhoynur who's goal in life is simply glory from the servitude of others. He has no problem being forgotten, as long as he knows his goals are complete...nothing else matters.
+A rhoynur who's goal in life is simply glory from the servitude of others. He has no problem being forgotten, as long as he knows his goals are complete...nothing else matters. He will shine, in the darkest hours.
 </font>
 </div>
 </center>
