--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Sail&display=swap" rel="stylesheet">
 
-<body style="background-image:url('https://wallpapercave.com/wp/wp2216445.jpg'); background-repeat: no-repeat; background-size: cover !important; margin:0;">
-<img align=left src=https://i.postimg.cc/RZk907LJ/Wilhelm-preview-rev-1.png width=auto height=100% style="margin-left:-200px;transition: 5s;">
-<br>
-<br>
-<br>
-<br>
-<center><div style="background-color:#000033; border-style: double; border-color: #ccffff;">
-<font color="#ffd700" size=7 style="font-family: 'Sail', cursive;"><b>Wilhelm R.</b></font>
 
+<body style="background-color:#000000; background-repeat: no-repeat; background-size: cover !important; margin:0;">
+
+<img id="pic" align=left src=https://i.postimg.cc/3wRMZVCp/Wilhelm-R.png width=auto height=100% style="margin-left:-200px;transition: 5s;">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<center>
+<font color="#806c00" size=7 style="font-family: 'Sail', cursive;"><b>Wilhelm</b></font>
  <br>
-
-<font color="#ffd700" face='verdana' size='2' style="">
-A rhoynur who's goal in life is simply glory from the servitude of others. He has no problem being forgotten, as long as he knows his goals are complete...nothing else matters. He will shine, in the darkest hours.
+ <hr>
+ 
+<br>
+<font color="#806c00" face='verdana' style="font-family: 'Sail', cursive; font-size:30px;">
+A warrior of renowned status, tales of his blade mastery have reached even those in distant lands. Scars cover his body, perhaps causing him to appear as nothing more than a battle hardened soldier. Though there is much more underneath.  An eerie feeling of doom and fear could be felt from the moment his blade is drawn, targeted towards any creature that would consider itself opposition. Formidable? An Understatement.
 </font>
-</div>
+</font>
+<br>
+
 </center>
 
-<iframe width=0 height=0 src="https://www.youtube.com/embed/R6w_3oKsh5g?autoplay=1" title=YouTube video player frameborder=0 allow=accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture allowfullscreen></iframe>
+
+<iframe width=0 height=0 src=https://www.youtube.com/embed/AB6sOhQan9Y?autoplay=1 title=YouTube video player frameborder=0 allow=accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture allowfullscreen></iframe>
 
 
 <script>
@@ -31,10 +39,12 @@ $(document).ready(function(){
 $('img').fadeIn(3000);
 $('font').hide();
 $('font').fadeTo(3000, 1.0);*/
-$('img').hide();
+$('#pic').hide();
 $('font').hide();
-$('img').animate({"margin-left": '+=200'}, 1000);
-$('img').fadeTo(3000, 1.0);
+$('#pic').animate({"margin-left": '+=200'}, 1000);
+$('#pic').fadeTo(3000, 1.0);
+/*$('#blood').animate({"margin-right": '+=300'}, 1000);
+$('#blood').fadeTo(3000, 1.0);*/
 $('font').fadeTo(3000, 1.0);
 
 
